--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,20 +1,62 @@
+{%load staticfiles%}
 <!DOCTYPE html>
 <html lan="es">
 <head>
   <meta charset="UTF-8">
+  {%block extrastatic%}
+  {%endblock%}
+  <link rel="stylesheet" href="{%static 'css/bootstrap.min.css'%}">
   <title>{%block title%} Document{%endblock%}</title>
 </head>
 <body>
-  {%block header%}
-  <h4> Este es el bloque del header base </h4>
-  {%endblock header%}
+<div class="container clearfix">
+  {% block navbar %}
+  <div class="bs-docs-section clearfix">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="bs-component">
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="#">Home</a>
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav nav-pills">
 
-  {%block content%}
-  <h5>Este es el contenido del archivo base</h5>
-  {%endblock%}
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                    <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 41px, 0px);">
+                      <a class="dropdown-item" href="#">Registrar</a>
+                      <a class="dropdown-item" href="#">Listar</a>
+                    </div>
+                  </li>
 
-  {%block footer%}
-  <h5>Soy el footer de la base</h5>
-  {%endblock footer%}
+
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                    <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 41px, 0px);">
+                      <a class="dropdown-item" href="#">Solicitar</a>
+                      <a class="dropdown-item" href="#">Listar solicitudes</a>
+                    </div>
+                  </li>
+
+                  </ul>
+
+                  <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Opciones
+                      <span class="caret"></span></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="{#}">Salir</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+
+        </div>
+      </div>
+    </div>
+    {% endblock %}
+  </div>
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="{%static 'js/bootstrap.min.js'%}"></script>
 </body>
 </html>
