--- a/templates/mascota/index.html
+++ b/templates/mascota/index.html
@@ -1,4 +1,13 @@
 {%extends 'base/base.html'%}
+
+{%block title%}
+APP Mascota
+{%endblock%}
+
 {%block header%}
 <h5> este es el header del index de la app mascota</h5>
 {%endblock header%}
+
+{%block content%}
+<h6>Contenido de mascota</h6>  
+{%endblock%}
