--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -16,15 +16,15 @@
       <div class="col-lg-12">
         <div class="bs-component">
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">Home</a>
+                <a class="navbar-brand" href="{%url 'adopcion:solicitud_listar'%}">Home</a>
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav nav-pills">
 
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Mascota</a>
                     <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 41px, 0px);">
-                      <a class="dropdown-item" href="#">Registrar</a>
-                      <a class="dropdown-item" href="#">Listar</a>
+                      <a class="dropdown-item" href="{%url 'mascota:mascota_crear'%}">Registrar</a>
+                      <a class="dropdown-item" href="{%url 'mascota:mascota_listar'%}">Listar</a>
                     </div>
                   </li>
 
@@ -32,8 +32,8 @@
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Adopción</a>
                     <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 41px, 0px);">
-                      <a class="dropdown-item" href="#">Solicitar</a>
-                      <a class="dropdown-item" href="#">Listar solicitudes</a>
+                      <a class="dropdown-item" href="{%url 'adopcion:solicitud_crear'%}">Solicitar</a>
+                      <a class="dropdown-item" href="{%url 'adopcion:solicitud_listar'%}">Listar solicitudes</a>
                     </div>
                   </li>
 
@@ -43,7 +43,7 @@
                     <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Opciones
                       <span class="caret"></span></a>
                       <ul class="dropdown-menu" role="menu">
-                        <li><a href="{#}">Salir</a></li>
+                        <li><a href="{%url 'logout'%}">Salir</a></li>
                       </ul>
                     </li>
                   </ul>
